<resources>
    <string name="app_name">Opskriften</string>
    <string name="not_signed_in">You are not signed in</string>
    <string name="sign_up" translatable="false">Sign up</string>
    <string name="log_in" translatable="false">Login</string>
    <string name="title_activity_login" translatable="false">Sign in</string>
    <string name="username_text">Username</string>
    <string name="username">Username</string>
    <string name="email_text" translatable="false">Email</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password_text" translatable="false">Password</string>
    <string name="password" translatable="false">Password</string>
    <string name="create_new_user">Create new user</string>
    <string name="sign_out">Log out</string>
    <string name="log_in_with_email">Log in with email</string>
    <string name="delete_user">Delete user</string>
    <string name="search" translatable="false">Search</string>
    <string name="recipe_title">Title</string>
    <string name="recipe_ingredients_card_title">Ingredients</string>
    <string name="steps_txt_card">Steps</string>
    <string name="notes_txt" translatable="false">Notes</string>
    <string name="user_notes" translatable="false">User notes with very long string because some people write a lot of text and I can\'t figure out what more to write so maybe i\n support multiline\n text</string>
    <string name="recipe_add_ingredient">Add ingredient</string>
    <string name="create_recipe_button">Create recipe</string>
    <string name="add_ingredient_button">Add</string>
    <string name="recipe_add_step">Add step</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title" translatable="false">LOVE FOOD</string>
    <string name="backdrop_subtitle" translatable="false"></string>
    <string name="no_of_servings">No. of servings</string>
    <string name="save_recipe">Save recipe</string>
    <string name="what_meal_is_it">Meal; eg breakfast, lunch, dinner</string>
    <string name="recipe_card_ingredients_text">Ingredients</string>
    <string name="recipe_card_steps_text">Steps</string>
    <string name="recipe_card_ingredients_steps_text">Steps</string>
    <string name="dialog_create_recipe">Create recipe</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="recipe_author">Author</string>
    <string name="recipe_meal">Meal</string>
    <string name="recipe_servers">Serves</string>
    <string name="recipe_date_created">Created</string>
    <string name="button_add_step">add</string>
    <string name="edit_text_step">Add step</string>
    <string name="testIngredientList">Ingredients</string>
    <string name="steps">Steps</string>

    <array name="main_items">
        <item>List -</item>
        <item>Grid -</item>
    </array>

    <array name="dummy_items">
        <item>Amuse-bouche</item>
        <item>Hors d\'oeuvre</item>
        <item>Soup</item>
        <item>Entrée</item>
        <item>Roast</item>
        <item>Main recipe</item>
        <item>Salad</item>
        <item>Side dish</item>
        <item>Entremet</item>
        <item>Dessert</item>
        <item>Meal preparation</item>
        <item>Other</item>
    </array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="menu_camera_label">Add picture</string>
    <string name="invitation_yes">Yes</string>
    <string name="invitation_del_no">No</string>
    <string name="choose_photo_title">Choose title</string>
    <string name="delete_recipe">Delete recipe</string>
</resources>
