<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_create_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="3dp"
        card_view:cardCornerRadius="@dimen/card_album_radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/recipe_card_steps_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/album_title_padding"
                android:paddingRight="@dimen/album_title_padding"
                android:paddingTop="@dimen/album_title_padding"
                android:textColor="@color/album_title"
                android:textSize="@dimen/recipe_card_title"
                android:text="@string/recipe_card_ingredients_steps_text" />

            <FrameLayout
                android:id="@+id/content_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_below="@id/recipe_card_steps_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edit_text_step"
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:hint="@string/edit_text_step"
                    android:inputType="textAutoCorrect|textCapWords"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/button_add_step"
                    android:text="@string/button_add_step"
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>